# alu-finance-blockchain

./: CMakeLists.txt  Dockerfile  README.md
blockchain/v0.3/: Makefile  README.md  block_is_valid.c  blockchain.h  blockchain_create.c
blockchain/v0.3/transaction/: transaction.h  transaction_hash.c  tx_in_create.c  tx_in_sign.c  tx_out_create.c  unspent_tx_out_create.c  update_unspent.c
cli/: add_transaction.c  cli.h  create_blockchain.c  exit.c  find_command.c  get_commands.c  help.c  info_tx.c  load_blockchain.c  load_wallet.c  main.c  mine_block.c  print_blockchain.c  save.c  save_wallet.c  state_clear.c  state_init.c  test_wallet.txt
crypto/: ec_create.c  ec_from_pub.c  ec_load.c  ec_save.c  ec_sign.c  ec_to_pub.c  hblk_crypto.h  sha256.c
llist/: install.bash
openssl-1.1.1w/: Makefile  configdata.pm  libcrypto.pc  libcrypto.so.1.1  libssl.pc  libssl.so.1.1  openssl.pc  pod2htmd.tmp
openssl-1.1.1w/apps/: openssl
openssl-1.1.1w/crypto/: buildinf.h
openssl-1.1.1w/fuzz/: asn1-test  asn1parse-test  bignum-test  bndiv-test  client-test  cms-test  conf-test  crl-test  ct-test  server-test  x509-test
openssl-1.1.1w/test/: aborttest  afalgtest  asn1_decode_test  asn1_encode_test  asn1_internal_test  asn1_string_table_test  asn1_time_test  asynciotest  asynctest  bad_dtls_test  bftest  bio_callback_test  bio_enc_test  bio_memleak_test  bioprinttest  bntest  buildtest_c_aes  buildtest_c_asn1  buildtest_c_asn1t  buildtest_c_async  buildtest_c_bio  buildtest_c_blowfish  buildtest_c_bn  buildtest_c_buffer  buildtest_c_camellia  buildtest_c_cast  buildtest_c_cmac  buildtest_c_cms  buildtest_c_comp  buildtest_c_conf  buildtest_c_conf_api  buildtest_c_crypto  buildtest_c_ct  buildtest_c_des  buildtest_c_dh  buildtest_c_dsa  buildtest_c_dtls1  buildtest_c_e_os2  buildtest_c_ebcdic  buildtest_c_ec  (+142 more)
openssl-1.1.1w/test/test-runs/: .rnd  a-cert.pem  a-key.pem  a2-cert.pem  b-cert.csr  b-cert.pem  b-key.pem  ca-cert.pem  ca-cert.srl  ca-key.pem  ecgen.B-163.explicit.der  ecgen.B-163.explicit.pem  ecgen.B-163.named_curve.der  ecgen.B-163.named_curve.pem  ecgen.B-233.explicit.der  ecgen.B-233.explicit.pem  ecgen.B-233.named_curve.der  ecgen.B-233.named_curve.pem  ecgen.B-283.explicit.der  ecgen.B-283.explicit.pem  ecgen.B-283.named_curve.der  ecgen.B-283.named_curve.pem  ecgen.B-409.explicit.der  ecgen.B-409.explicit.pem  ecgen.B-409.named_curve.der  ecgen.B-409.named_curve.pem  ecgen.B-571.explicit.der  ecgen.B-571.explicit.pem  (+368 more)
utils/: _blockchain_print.c  _genesis.c  _transaction_print.c  _transaction_print_brief.c  utils.h
